--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "noImplicitAny": true
+  },
   "include": [],
   "exclude": [],
   "extends": "expo/tsconfig.base"
